Prevent double borders for grid
Also remove the exploratory for code the hover effect, as it's not
what I want. I want to the user to only be able to change the colors
via the effect when their mouse button is down and dragged.

--- a/styles.css
+++ b/styles.css
@@ -8,5 +8,5 @@
 
 .grid-item {
   background-color: white;
-  border: 1px solid black;
+  outline: 1px solid black;
 }
